<resources>
    <string name="app_name">Project-Traffic</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">Username</string>
    <string name="action_settings">Settings</string>
    <string name="post">Post</string>
    <string name="street_name">Enter Street Name or Location</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_feed">FeedActivity</string>
    <string name="title_activity_feed_tab_pager_adapter">FeedTabPagerAdapter</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_traffic_post">TrafficPostActivity</string>
    <string name="title_activity_post_traffic_details">PostTrafficDetails</string>
    <string name="title_activity_feed_list_adapter">FeedListAdapter</string>
    <string name="stop_and_go">Stop and Go</string>
    <string name="moderate_traffic">Moderate Traffic</string>
    <string name="no_congestion">No Congestion</string>
    <string name="closed_road">Closed Road</string>
    <string name="congestion_level_text">Traffic Congestion Level:</string>
    <string name="traffic_desc_hint">What is traffic like? (Optional)</string>
    <string name="user_handle">Enter a handle</string>
    <string name="heavy_traffic">Heavy Traffic</string>
    <string name="traffic_details_header"><u>TRAFFIC STATS</u></string>
</resources>
