<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ibm.project_traffic.Packages.UI.TrafficPostActivity"
    android:background="@color/c_white">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="2dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="5dp"
        android:id="@+id/wrap"
        android:layout_marginTop="65dp">

        
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_starting_pt"
            android:layout_alignTop="@+id/route_start"
            android:id="@+id/starting_pt_icon"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:id="@+id/route_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColorHint="@color/c_gray"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:gravity="left"
            android:layout_marginBottom="5dp"
            android:maxLines="3"
            android:layout_toRightOf="@+id/starting_pt_icon"
             />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_destination"
            android:id="@+id/destination_icon"
            android:layout_below="@+id/route_start"
            android:paddingTop="5dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/route_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColorHint="@color/c_gray"
            android:maxLines="3"
            android:gravity="left"
            android:layout_marginTop="3dp"
            android:paddingTop="8dp"
            android:layout_alignTop="@+id/destination_icon"
            android:layout_marginBottom="16dp"
            android:layout_toRightOf="@+id/destination_icon"
            android:layout_toEndOf="@+id/destination_icon" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/c_gray"
            android:id="@+id/loc_editText_divider"
            android:layout_marginTop="2dp"
            android:layout_below="@+id/route_end"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/traffic_post_layout"
            android:background="@color/c_white"
            android:layout_below="@+id/loc_editText_divider"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/c_gray"
            android:id="@+id/editText_radiobtn_divider"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_below="@+id/radio_group"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
           />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/radio_group"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_below="@+id/traffic_post_layout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/congestion_level_text"
                android:id="@+id/text"
                android:textSize="18dp"
                android:layout_above="@+id/radio_group"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:paddingBottom="8dp"/>

            <RadioButton android:id="@+id/closed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/closed_road"/>

            <RadioButton android:id="@+id/no_congestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_congestion"
                />

            <RadioButton android:id="@+id/moderate_traffic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moderate_traffic"
                />

            <RadioButton android:id="@+id/stop_and_go"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop_and_go"
                />

            <RadioButton android:id="@+id/heavy_traffic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/heavy_traffic"
                />
        </RadioGroup>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_reporting_location"
            android:id="@+id/reporting_loc_icon"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_below="@+id/editText_radiobtn_divider"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_toRightOf="@+id/reporting_loc_icon"
            android:id="@+id/reportingLocation"
            android:layout_below="@+id/editText_radiobtn_divider"
            android:paddingTop="5dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <com.ibm.project_traffic.Packages.Utils.TrafficaEditText
            android:id="@+id/traffic_post"
            android:layout_width ="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/traffic_desc_hint"
            android:background="@android:color/transparent"
            android:textColorHint="#bababa"
            android:layout_below="@+id/reportingLocation"
            android:singleLine="false"
            android:gravity="top"
            android:imeOptions="actionSend"
            android:inputType="textMultiLine"
            android:layout_above="@+id/user_handle"
            android:layout_marginLeft="10dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_user"
            android:id="@+id/handle_icon"
            android:layout_alignTop="@+id/user_handle"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_handle"
            android:textAlignment="center"
            android:textStyle="italic"
            android:textColor="@color/c_blue_gray"
            android:id="@+id/user_handle"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/handle_icon"
            android:layout_toEndOf="@+id/handle_icon"
            android:singleLine="true"
             />
    </RelativeLayout>

</RelativeLayout>